bk_ida/gccida/c2/get_insn_name
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_insn_name/src/insn-output.c:32921:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return insn_data_0[code].name; 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_insn_name/src/insn-output.c:19281:24: note: 'insn_data' declared here
const struct insn_data insn_data[] = 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_insn_name/src/obj/insn-output.o] Error 1
